--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,17 @@
-<h2>hello hbs</h2>
+<div class="container">
+  <h1 class="display-1">URL Shortener</h1>
+  <img
+    src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png"
+    alt=""
+  />
+  <form action="/URL" method="POST">
+    <input
+      type="url"
+      class="form-control mt-4"
+      name="originalURL"
+      placeholder="Input URL here"
+      required
+    />
+    <button type="submit" class="btn btn-primary btn-lg mt-4">Shorten</button>
+  </form>
+</div>
