Modify POST routes & create routes for "/shortURL" and then direct to original URL

--- a/views/result.hbs
+++ b/views/result.hbs
@@ -6,7 +6,7 @@
   />
   <h1 class="display-4">Success! Please use this link:</h1>
   <a
-    href="http://localhost:3000/"
+    href="{{originalURL}}"
     id="urlCreated"
   >http://localhost:3000/{{shortURL}}</a>
   <button
