--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
     src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png"
     alt=""
   />
-  <form action="/URL" method="POST">
+  <form action="/result" method="POST">
     <input
       type="url"
       class="form-control mt-4"
