--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,16 @@
-<div class="container">
+<form
+  action="/result"
+  method="POST"
+  class="d-flex flex-column align-items-center"
+>
   <h1 class="display-1">URL Shortener</h1>
   <img
     src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png"
     alt=""
+    width="300"
+    height="auto"
   />
-  <form action="/result" method="POST">
+  <div class="col-sm-5">
     <input
       type="url"
       class="form-control mt-4"
@@ -12,6 +18,9 @@
       placeholder="Input URL here"
       required
     />
-    <button type="submit" class="btn btn-primary btn-lg mt-4">Shorten</button>
-  </form>
-</div>
+  </div>
+
+  <div class="d-grid gap-2 col-3 mx-auto">
+    <button type="submit" class="btn btn-info btn-lg mt-4">Shorten</button>
+  </div>
+</form>
