--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,15 +4,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL_Shortener</title>
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/d8a3e152c3.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    {{{body}}}
+    <header>
+      <nav class="navbar bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="http://localhost:3000">
+            <img
+              src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png"
+              alt="Logo"
+              width="auto"
+              height="24"
+              class="d-inline-block align-text-top"
+            />
+            URL Shortener
+          </a>
+
+          <a class="navbar-brand" href="/myurls">
+            <i class="fa-solid fa-list"></i>
+            My URLs
+          </a>
+        </div>
+      </nav>
+    </header>
+    <main class="container mt-3">
+      {{{body}}}
+    </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     ></script>
+
   </body>
 </html>
